apps/n8n/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: md-worker-0.kalkutin.dev
